--- a/ChatApp/app/build.gradle
+++ b/ChatApp/app/build.gradle
@@ -1,15 +1,5 @@
 apply plugin: 'com.android.application'
 
-// Create a variable called keystorePropertiesFile, and initialize it to your
-// keystore.properties file, in the rootProject folder.
-def keystorePropertiesFile = rootProject.file("keystore.properties")
-
-// Initialize a new Properties() object called keystoreProperties.
-def keystoreProperties = new Properties()
-
-// Load your keystore.properties file into the keystoreProperties object.
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
@@ -21,18 +11,21 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        config {
+            keyAlias 'MyAndroidKey'
+            keyPassword 'Ousmane'
+            storeFile file('../android.jks')
+            storePassword 'Ousmane'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    signingConfigs {
-        config {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
+            signingConfig signingConfigs.config
         }
     }
 }
@@ -46,7 +39,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.parse:parse-android:1.13.1'
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
-    compile 'com.facebook.stetho:stetho:1.3.0'
+    debugCompile 'com.facebook.stetho:stetho:1.3.0'
     compile 'com.parse:parseinterceptors:0.0.2'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
